--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "node src/app.js",
     "dev": "nodemon src/app.js",
-    "test": "mocha test/users.test.js"
+    "test": "mocha test/usersChai.test.js"
   },
   "keywords": [],
   "author": "",
@@ -20,13 +20,13 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^6.7.5",
     "multer": "^1.4.5-lts.1",
-    "supertest": "^6.3.3",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "winston": "^3.15.0"
   },
   "devDependencies": {
-    "chai": "^4.3.7",
-    "mocha": "^10.8.2"
+    "chai": "^4.5.0",
+    "mocha": "^10.8.2",
+    "supertest": "^7.0.0"
   }
 }
