--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "node src/app.js",
     "dev": "nodemon src/app.js",
-    "test": "mocha test/usersChai.test.js"
+    "test": "mocha test/adoptionChai.test.js"
   },
   "keywords": [],
   "author": "",
@@ -22,6 +22,7 @@
     "multer": "^1.4.5-lts.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
+    "typescript": "^5.6.3",
     "winston": "^3.15.0"
   },
   "devDependencies": {
