Guardando cambios en qa

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGO_ULR=mongodb+srv://gabyriveroadmi1:Coder1234@cluster0.rrpbegd.mongodb.net/backendIII?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URL=mongodb+srv://gabyriveroadmi1:Coder1234@cluster0.rrpbegd.mongodb.net/backendIII?retryWrites=true&w=majority&appName=Cluster0
 PORT=3000
