--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@faker-js/faker": "^9.0.3",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^6.7.5",
